# ComputerVision

./: .gitignore  CMakeLists.txt  Intervalos HSV resistências.xlsx  README.txt  main.c  main.cpp  sampleHSV.ppm  teste.txt  vc.c  vc.h
